--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
     height: 110vh;
+    padding: 0 150px;
 }
 .believe {
     text-align: right;
@@ -62,7 +63,7 @@ body {
 /* FAILURES SECTION */
 
 #failures {
-    padding: 90px 0;
+    padding: 60px 90px;
 }
 
 .failures {
@@ -76,6 +77,7 @@ body {
 }
 .failures-title {
     font-size: 36px;
+    font-weight: 700;
     line-height: 42px;
 }
 
@@ -95,3 +97,41 @@ body {
     margin-right: 10px;
     color: #0be881;
 }
+
+
+/* PLANS SECTION */
+
+#plans {
+    padding: 30px 0;
+}
+
+.plans-title {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 42px;
+    text-align: center;
+    margin: 15px 0;
+}
+
+.my-plans-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 45px 0;
+}
+
+.plans-item {
+    text-align: center;
+}
+
+.plans-item-info h4 {
+    font-size: 24px;
+    font-weight: 700;
+    margin: 5px 0;
+}
+
+.plans-item-info p {
+    font-size: 16px;
+    font-weight: 600;
+}
+
