--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ body {
 }
 
 .believe-button {
+    font-family: 'Titillium Web';
     font-size: 16px;
     font-weight: 600;
     background-color: #fff;
@@ -135,3 +136,37 @@ body {
     font-weight: 600;
 }
 
+/* CALL NOW SECTION */
+#call-now {
+    margin: 45px 160px;
+}
+
+.call-now-info {
+    padding: 60px;
+    background: linear-gradient(rgba(6, 81, 221, 0.718), rgba(6, 81, 221, 0)), url('../images/watch.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    color: #fff;
+}
+
+.call-now-info h3 {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 36px;
+    padding: 30px 0;
+}
+
+.call-now-button {
+    font-family: 'Titillium Web';
+    font-size: 16px;
+    font-weight: 600;
+    background-color: #fff;
+    color: #0171BB;
+    padding: 15px 20px;
+    border-radius: 4px;
+    border: 0;
+    outline: 0;
+    cursor: pointer;
+}
