--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ body {
     font-weight: 600;
     background-color: #fff;
     color: #0171BB;
-    padding: 15px 20px;
+    padding: 10px 20px;
     border-radius: 4px;
     border: 0;
     outline: 0;
@@ -164,9 +164,90 @@ body {
     font-weight: 600;
     background-color: #fff;
     color: #0171BB;
-    padding: 15px 20px;
+    padding: 10px 20px;
     border-radius: 4px;
     border: 0;
     outline: 0;
     cursor: pointer;
+}
+
+/* FOOTER SECTION */
+
+#footer {
+    padding: 45px 0;
+    background-color: #181818;
+    color: #fff;
+}
+
+.footer-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0 90px;
+}
+
+.footer-title {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 42px;
+    margin: 15px 0;
+}
+
+.footer-description {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    margin: 20px 0;
+}
+
+.contact-email,
+.contact-phone-number {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    margin: 5px 0;
+}
+
+.footer-social-icon {
+    margin: 20px 0
+}
+.footer-social-icon img {
+    width: 35px;
+    margin: 0 5px;
+}
+
+.subscribe-title {
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 32px;
+    margin: 20px 0;
+}
+
+.subscribe input {
+    padding: 15px 20px;
+    background-color: #181818;
+    color: #fff;
+    border: 1px solid #fff;
+    outline: 0;
+    box-shadow: none;
+    border-radius: 5px;
+}
+
+.subscribe input::placeholder {
+    color: #fff;
+}
+
+.subscribe-button {
+    font-family: 'Titillium Web';
+    font-size: 16px;
+    font-weight: 600;
+    background-color: #0171BB;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 4px;
+    border: 0;
+    outline: 0;
+    cursor: pointer;
+    display: block;
+    margin: 10px 0;
 }
